--- a/ultimate-react-course-main/06-eat-n-split/eat-n-split/src/index.css
+++ b/ultimate-react-course-main/06-eat-n-split/eat-n-split/src/index.css
@@ -13,8 +13,8 @@
 
 html {
   font-size: 62.5%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -28,7 +28,7 @@ body {
 .app {
   min-height: 66vh;
   display: grid;
-  grid-template-columns: 34rem 44rem;
+  grid-template-columns: 35rem 44rem;
   column-gap: 4rem;
   align-items: start;
 }
